# wavesmodel

./: .gitignore  README.md  compare_proj_data_RSA.py  config.py  create_epochs.py  encodingModel_retino_proj.py  encodingModel_retino_sources.py  environment.yml  input.py  main.py  minimal_example.py  notes  preproc.py  pyproject.toml  readme.rst  simulation.py  utils.py
GUI/: input.py  tools.py
docs/: conf.py  config_files.rst  documentation.rst  index.rst  readme.rst  toolbox.GUI.rst  toolbox.rst  workflow.rst
examples/: example1.py
legacy/: config.py  encodingModel_retino_proj.py  encodingModel_retino_sources.py
test/: test_configIO.py  test_main.py  test_simulation.py
test/entry/: entry.ini
tests/: test_configIO.py  test_main.py  test_simulation.py
toolbox/: Errors.py  comparison.py  configIO.py  entry.py  free_params.py  main.py  plot_projection.py  projection.py  simulation.py  statistics.py  utils.py
toolbox/GUI/: input.py  tools.py
