[tool.poetry]
name = "wavemodel"
version = "0.1.0"
description = ""
authors = ["Laetitia Grabot"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mne = "^1.6.0"
ipython = "^8.18.1"
numba = "0.56.4"
joblib = "^1.3.2"
seaborn = "^0.13.2"
nibabel = "^5.2.0"
qtpy = "^2.4.1"
pyvistaqt = "^0.11.0"
pyqt6 = "^6.6.1"
cmocean = "^3.1.3"
colorcet = "^3.0.1"
imageio = "^2.34.0"
h5py = "^3.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

